Fix truncated spanish

--- a/ddp-workspace/projects/ddp-testboston/src/app/components/header/header.component.scss
+++ b/ddp-workspace/projects/ddp-testboston/src/app/components/header/header.component.scss
@@ -71,8 +71,9 @@
     align-items: center;
     font-weight: 600;
     font-size: 16px;
-    line-height: 33px;
+    line-height: 23px;
     white-space: nowrap;
+    margin: 5px 0 5px 0;
     color: mat-color($app-theme, 1300);
 
     &__icon {
